WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272211
[WebGPU] CommandEncoder::clearBuffer fails validation for destroyed buffer which is then unmapped
https://bugs.webkit.org/show_bug.cgi?id=272211
Summary
[WebGPU] CommandEncoder::clearBuffer fails validation for destroyed buffer wh...
Mike Wyrzykowski
Reported
2024-04-04 22:50:46 PDT
[WebGPU] CommandEncoder::clearBuffer fails validation for destroyed buffer which is then unmapped
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-04-04 22:51:05 PDT
radar://123328077
Mike Wyrzykowski
Comment 2
2024-04-04 22:56:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26890
EWS
Comment 3
2024-04-05 10:14:46 PDT
Committed
277121@main
(e93212620ad5): <
https://commits.webkit.org/277121@main
> Reviewed commits have been landed. Closing PR #26890 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug