[WebGPU] CommandEncoder::clearBuffer fails validation for destroyed buffer which is then unmapped https://bugs.webkit.org/show_bug.cgi?id=272211 <radar://123328077>

Reviewed by Tadeu Zagallo.

It does not appear the specificaion prevents a destroyed buffer from
becoming unmapped and effectively non-destroyed, though it probably should.

However in that case we don't fail validation and then Metal validation fails
on the fillBuffer call, so guard against that.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::clearBuffer):

Canonical link: https://commits.webkit.org/277121@main